# hardware_collection

./: .gitignore  README.md  pyproject.toml  realrobot_zed.py
configs/: 202_centric_cam.yaml  202_front_cam.yaml  202_right_cam.yaml  202_wrist_cam.yaml  config.yaml  depthai.yaml  zed_publisher.yaml  zlc.yaml
configs/zed_config/: 102_zed_left_cam.yaml  102_zed_right_cam.yaml  102_zed_wrist_cam.yaml
hardware_collection/camera/: camera.py  camera_cv2.py  camera_depthai.py  camera_depthai_script.py  camera_zed.py  camera_zed_sdk.py  no_use_camera_zed.py
hardware_collection/controller/: gello.py
hardware_collection/core/: abstract_hardware.py
hardware_collection/gello/: gello_control_demo.py
hardware_collection/gello/configurations/: usb-FTDI_USB__-__Serial_Converter_FT94EVRT-if00-port0.json
hardware_collection/hardware_node/: depthai_cam_node.py  depthai_subscriber.py  gello_node.py  zed_cam_node.py
hardware_collection/publisher/: zed_publisher.py
hardware_collection/test/: data_collection_demo.py  test_zed.py
hardware_collection/test/configs/: config.yaml  zed_publisher.yaml
hardware_collection/zed_config/: 102_zed_left_cam.yaml  102_zed_right_cam.yaml  102_zed_wrist_cam.yaml
outputs/2025-12-01/17-44-12/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-01/17-45-13/.hydra/: hydra.yaml
outputs/2025-12-01/17-47-28/.hydra/: hydra.yaml
reference/: realrobot_cam.py
scripts/camera/: start_camera.bash
test/: data_collection_demo.py  debug_oak.py  test_depthai.py  test_zed.py
utils/: keyboard_input.py
(+36 files in other folders)
